scrapcore_serialization_macro/src/snapshots/scrapcore_serialization_macro__tests__registry_tests@custom_registry_name.rs.snap
---
source: scrapcore_serialization_macro/src/tests.rs
expression: check_registry(path)
input_file: scrapcore_serialization_macro/src/test_cases/registry/custom_registry_name.rs
---
#[registry(error = "ModelError", registry_name = CustomRegistry)]
pub enum Model {
    #[model(collection)]
    Test(A),
    #[model(singleton)]
    TestSingle(B),
    #[model(asset)]
    TestAsset(Option<A>),
}
#[derive(Debug)]
pub enum ModelItem {
    TestSingle(B),
    Test(A),
}
#[derive(Debug, Clone, serde::Serialize, serde::Deserialize)]
#[derive(schemars::JsonSchema)]
#[serde(tag = "type")]
#[serde(rename = "ModelItem")]
pub enum ModelItemSerialized {
    TestSingle(
        <B as scrapcore_serialization::serialization::SerializationFallback>::Fallback,
    ),
    Test(
        scrapcore_serialization::registry::entry::RegistryEntrySerialized<
            <A as scrapcore_serialization::serialization::SerializationFallback>::Fallback,
        >,
    ),
}
#[derive(Debug, Copy, Clone, Eq, PartialEq, serde::Serialize, serde::Deserialize)]
#[derive(schemars::JsonSchema)]
pub enum ModelItemKind {
    TestSingle,
    Test,
}
#[automatically_derived]
impl std::fmt::Display for ModelItemKind {
    fn fmt(&self, f: &mut std::fmt::Formatter<'_>) -> std::fmt::Result {
        write!(
            f, "{}", match self { ModelItemKind::TestSingle => stringify!(TestSingle),
            ModelItemKind::Test => stringify!(Test), }
        )
    }
}
#[derive(Debug, Copy, Clone, Eq, PartialEq, serde::Serialize, serde::Deserialize)]
#[derive(schemars::JsonSchema)]
pub enum ModelAssetKind {
    TestAsset,
}
#[automatically_derived]
impl std::fmt::Display for ModelAssetKind {
    fn fmt(&self, f: &mut std::fmt::Formatter<'_>) -> std::fmt::Result {
        write!(
            f, "{}", match self { ModelAssetKind::TestAsset => stringify!(TestAsset), }
        )
    }
}
#[automatically_derived]
impl scrapcore_serialization::registry::kind::ItemKindProvider<B> for CustomRegistry {
    fn kind() -> Self::ItemKind {
        ModelItemKind::TestSingle
    }
}
#[automatically_derived]
impl scrapcore_serialization::registry::kind::ItemKindProvider<A> for CustomRegistry {
    fn kind() -> Self::ItemKind {
        ModelItemKind::Test
    }
}
#[automatically_derived]
impl scrapcore_serialization::registry::kind::AssetKindProvider<Option<A>>
for CustomRegistry {
    fn asset_kind() -> Self::AssetKind {
        ModelAssetKind::TestAsset
    }
}
#[automatically_derived]
impl scrapcore_serialization::registry::kind::ItemKindProvider<B>
for PartialCustomRegistry {
    fn kind() -> Self::ItemKind {
        ModelItemKind::TestSingle
    }
}
#[automatically_derived]
impl scrapcore_serialization::registry::kind::ItemKindProvider<A>
for PartialCustomRegistry {
    fn kind() -> Self::ItemKind {
        ModelItemKind::Test
    }
}
#[automatically_derived]
impl scrapcore_serialization::registry::kind::AssetKindProvider<Option<A>>
for PartialCustomRegistry {
    fn asset_kind() -> Self::AssetKind {
        ModelAssetKind::TestAsset
    }
}
#[derive(Debug)]
pub struct CustomRegistry {
    pub test_single: scrapcore_serialization::registry::Singleton<B>,
    pub test: scrapcore_serialization::registry::ItemCollection<A>,
    pub test_asset: scrapcore_serialization::registry::AssetsCollection<Option<A>>,
}
#[derive(Debug, Default)]
pub struct PartialCustomRegistry {
    poisoned__: bool,
    test_single: scrapcore_serialization::registry::PartialSingleton<
        B,
        <B as scrapcore_serialization::serialization::SerializationFallback>::Fallback,
    >,
    test: scrapcore_serialization::registry::PartialItemCollection<
        A,
        <A as scrapcore_serialization::serialization::SerializationFallback>::Fallback,
    >,
    test_asset: scrapcore_serialization::registry::AssetsCollection<Option<A>>,
}
#[automatically_derived]
impl scrapcore_serialization::registry::SingletonHolder<B> for CustomRegistry {
    fn get_singleton(&self) -> &scrapcore_serialization::registry::Singleton<B> {
        &self.test_single
    }
    fn get_singleton_mut(
        &mut self,
    ) -> &mut scrapcore_serialization::registry::Singleton<B> {
        &mut self.test_single
    }
}
#[automatically_derived]
impl scrapcore_serialization::registry::PartialSingletonHolder<B>
for PartialCustomRegistry {
    type Serialized = <B as scrapcore_serialization::serialization::SerializationFallback>::Fallback;
    fn get_singleton(
        &mut self,
    ) -> &mut scrapcore_serialization::registry::PartialSingleton<
        B,
        <B as scrapcore_serialization::serialization::SerializationFallback>::Fallback,
    > {
        &mut self.test_single
    }
}
#[automatically_derived]
impl scrapcore_serialization::registry::CollectionHolder<A> for CustomRegistry {
    fn get_collection(&self) -> &scrapcore_serialization::registry::ItemCollection<A> {
        &self.test
    }
    fn get_collection_mut(
        &mut self,
    ) -> &mut scrapcore_serialization::registry::ItemCollection<A> {
        &mut self.test
    }
}
#[automatically_derived]
impl scrapcore_serialization::registry::PartialCollectionHolder<A>
for PartialCustomRegistry {
    type Serialized = <A as scrapcore_serialization::serialization::SerializationFallback>::Fallback;
    fn get_collection(
        &mut self,
    ) -> &mut scrapcore_serialization::registry::PartialItemCollection<
        A,
        <A as scrapcore_serialization::serialization::SerializationFallback>::Fallback,
    > {
        &mut self.test
    }
}
#[automatically_derived]
impl scrapcore_serialization::registry::AssetsHolder<Option<A>> for CustomRegistry {
    fn get_assets(
        &self,
    ) -> &scrapcore_serialization::registry::AssetsCollection<Option<A>> {
        &self.test_asset
    }
    fn get_assets_mut(
        &mut self,
    ) -> &mut scrapcore_serialization::registry::AssetsCollection<Option<A>> {
        &mut self.test_asset
    }
}
#[automatically_derived]
impl scrapcore_serialization::registry::AssetsHolder<Option<A>>
for PartialCustomRegistry {
    fn get_assets(
        &self,
    ) -> &scrapcore_serialization::registry::AssetsCollection<Option<A>> {
        &self.test_asset
    }
    fn get_assets_mut(
        &mut self,
    ) -> &mut scrapcore_serialization::registry::AssetsCollection<Option<A>> {
        &mut self.test_asset
    }
}
#[automatically_derived]
impl scrapcore_serialization::registry::SerializationRegistry for CustomRegistry {
    type ItemKind = ModelItemKind;
    type AssetKind = ModelAssetKind;
    type Error = ModelError;
}
#[automatically_derived]
impl scrapcore_serialization::registry::SerializationRegistry for PartialCustomRegistry {
    type ItemKind = ModelItemKind;
    type AssetKind = ModelAssetKind;
    type Error = ModelError;
}
impl scrapcore_serialization::registry::PartialRegistry for PartialCustomRegistry {
    type Registry = CustomRegistry;
    fn reserve_ids(
        &mut self,
        registry: &Self::Registry,
    ) -> Result<(), DeserializationError<Self>> {
        scrapcore_serialization::registry::hot_reloading::reserve_ids::<
            A,
            Self,
        >(registry, self)?;
        Ok(())
    }
    fn poison(&mut self) {
        self.poisoned__ = true;
    }
    fn is_poisoned(&self) -> bool {
        self.poisoned__
    }
}
impl PartialCustomRegistry {
    pub fn into_registry(
        self,
    ) -> Result<
        CustomRegistry,
        scrapcore_serialization::serialization::error::DeserializationError<
            PartialCustomRegistry,
        >,
    > {
        let mut registry = self;
        scrapcore_serialization::registry::finalize::process_raw_collection::<
            A,
            PartialCustomRegistry,
        >(&mut registry)?;
        scrapcore_serialization::registry::finalize::process_raw_singleton::<
            B,
            PartialCustomRegistry,
        >(&mut registry)?;
        let test = scrapcore_serialization::registry::finalize::convert_partial_collection::<
            A,
            PartialCustomRegistry,
        >(registry.test)?;
        let test_single = scrapcore_serialization::registry::finalize::convert_partial_singleton::<
            B,
            PartialCustomRegistry,
        >(registry.test_single)?;
        let test_asset = registry.test_asset;
        Ok(CustomRegistry {
            test,
            test_single,
            test_asset,
        })
    }
}
impl PartialCustomRegistry {
    pub fn insert(
        &mut self,
        path: impl Into<
            scrapcore_serialization::registry::path_identifier::PathIdentifier,
        >,
        item: ModelItemSerialized,
    ) -> Result<
        (),
        scrapcore_serialization::serialization::error::DeserializationError<
            PartialCustomRegistry,
        >,
    > {
        let registry = self;
        let path = path.into();
        match item {
            ModelItemSerialized::Test(item) => {
                scrapcore_serialization::registry::insert::registry_insert::<
                    A,
                    PartialCustomRegistry,
                >(registry, path, item)?
            }
            ModelItemSerialized::TestSingle(item) => {
                scrapcore_serialization::registry::insert::singleton_insert::<
                    B,
                    PartialCustomRegistry,
                >(registry, path, item)?
            }
        }
        Ok(())
    }
}
pub mod id {
    use super::*;
    pub type TestId = scrapcore_serialization::registry::CollectionItemId<A>;
}
